--- a/index.html
+++ b/index.html
@@ -1106,12 +1106,17 @@
   </div>
 
   <div class="modal-review" id="modal-review">
-    <div class="modal-review__inner"></div>
+    <div class="modal-review__inner">
+      <div class="modal-review__title"></div>
+      <div class="modal-review__content"></div>
+    </div>
   </div>
 
   <script type="template" id="overlay1">
     <div class="modal-review__title">Константин Спилберг</div>
-    <div class="modal-review__content">Мысли все о них и о них...</div>
+    <div class="modal-review__content">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть...
+    Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной,
+    а сыр таким расплавленным.</div>
   </script>
 
   <script src="js/hamburger-menu.js"></script>
