--- a/index.html
+++ b/index.html
@@ -1109,6 +1109,7 @@
     <div class="modal-review__inner">
       <div class="modal-review__title"></div>
       <div class="modal-review__content"></div>
+      <div class="modal-review__close"></div>
     </div>
   </div>
 
@@ -1121,6 +1122,7 @@
     а сыр таким расплавленным.</div>
   </script>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="js/hamburger-menu.js"></script>
   <script src="js/product-slider.js"></script>
   <script src="js/modal.js"></script>
