--- a/index.html
+++ b/index.html
@@ -1110,6 +1110,7 @@
       <div class="modal-review__title"></div>
       <div class="modal-review__content"></div>
       <div class="modal-review__close"></div>
+      <div class="btn order__btn"></div>
     </div>
   </div>
 
