--- a/index.html
+++ b/index.html
@@ -243,8 +243,7 @@
                       <p class="slider__description-text">
                         Пышная черная булочка, сочная котлета из мраморной говядины, хрустящий копченый бекон
                         индейки, жареные с луком грибы в соусе демиглас, спелые помидоры, два вида
-                        сыров: нежный фета и чеддер, кольца красного лука, листья салата, карамелизированная груша,
-                        смородиновый джем, соус релиш, наш фирменный соус с трюфельным маслом и паштет из фуагра.
+                        сыров, наш фирменный соус с трюфельным маслом и паштет из фуагра.
                       </p>
                     </div>
                     <div class="slider__price">
@@ -518,8 +517,7 @@
                       <p class="slider__description-text">
                         Неизменно любимая вечная классика: тающая во рту домашняя булочка,
                         сочная котлета из мраморной говядины, или индейки, хрустящий копчёный
-                        бекон индейки, маринованные огурцы, кольца красного лука, сыр чеддер,
-                        спелые помидоры, листья салата и наш фирменный соус с трюфельным маслом.
+                        бекон индейки, маринованные огурцы.
                       </p>
                     </div>
                     <div class="slider__price">
@@ -610,8 +608,7 @@
                       <p class="slider__description-text">
                         Ничего лишнего, только сырные шарики из двух видов сыра – моцарелла и чеддер,
                         спелые помидоры, листья салата, бабагануш, соус зеленый карри, релиш и наша
-                        фирменная заправка с трюфельным маслом. Весь этот вегетарианский рай обрамляет
-                        пышная свежайшая булочка.
+                        фирменная заправка с трюфельным маслом.
                       </p>
                     </div>
                     <div class="slider__price">
