--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
   <link rel="icon" href="./favicon.ico" type="image/x-icon">
 
+  <script src="https://api-maps.yandex.ru/2.1/?apikey=<ваш API-ключ>&lang=ru_RU" type="text/javascript"></script>
+
 </head>
 
 <body>
@@ -979,8 +981,8 @@
         </div>
       </section>
 
-      <section class="section map" id="map">
-        <div id="YMapsID" style="width: 100%; height: 100%;"></div>
+      <section class="section map">
+        <div id="map" class="mapStyle" style="width: 100%; height: 100%;"></div>
         <footer class="footer">
           <div class="container footer__container">
             <div class="footer__content">
@@ -1127,6 +1129,7 @@
   <script src="js/acco.js"></script>
   <script src="js/order-form.js"></script>
   <script src="js/form-input-numbers.js"></script>
+  <script src="js/map.js"></script>
 
 </body>
 </html>
