--- a/index.html
+++ b/index.html
@@ -897,6 +897,17 @@
         </ul>
       </section>
 
+      <section class="section section_centered how" id="how">
+        <div class="container how__container">
+          <div class="how__content">
+            <h1 class="section-title section-title_black">Как мы работаем</h1>
+            <div class="video">
+              
+            </div>
+          </div>
+        </div>
+      </section>
+
       <section class="section section_centered order" id="order">
         <div class="container order__container">
 
