--- a/index.html
+++ b/index.html
@@ -901,8 +901,8 @@
         <div class="container how__container">
           <div class="how__content">
             <h1 class="section-title section-title_black">Как мы работаем</h1>
-            <div class="video">
-              
+            <div class="how__video">
+              <video class="how__video-player" src="./how_video.mp4" controls poster="images/how-video.png"></video>
             </div>
           </div>
         </div>
