--- a/index.html
+++ b/index.html
@@ -1129,6 +1129,8 @@
   </script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/mobile-detect/1.3.6/mobile-detect.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.18/jquery.touchSwipe.min.js"></script>
   <script src="js/ops.js"></script>
   <script src="js/hamburger-menu.js"></script>
   <script src="js/product-slider.js"></script>
