--- a/index.html
+++ b/index.html
@@ -894,12 +894,31 @@
         </ul>
       </section>
 
-      <section class="section section_centered how" id="how">
-        <div class="container how__container">
-          <div class="how__content">
-            <h1 class="section-title section-title_black">Как мы работаем</h1>
-            <div class="how__video">
-              <video class="how__video-player" src="./how_video.mp4" controls poster="images/how-video.png"></video>
+      <section class="section video">
+        <div class="container video__container">
+          <h2 class="section-title section-title_black">Как мы работаем</h2>
+          <div class="player hidden">
+            <div class="player__wrapper">
+              <div id="yt-player"></div>
+              <div class="player__splash"></div>
+            </div>
+            <div class="player__controls">
+              <button class="player__start"></button>
+              <div class="player__playback">
+                <button class="player__playback-button"></button>
+              </div>
+              <div class="player__duration">
+                <span class="player__duration-completed">0:00</span> :
+                <span class="player__duration-estimate">0:00</span>
+              </div>
+              <div class="player__sound">
+                <svg class="play sound__mic" id="mic">
+                  <use xlink:href="./sprite.svg#volume-icon"></use>
+                </svg>
+                <div class="sound__volume">
+                  <input type="range" class="duration__length duration__length--other" id="micLevel">
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -1115,8 +1134,6 @@
     <!-- wrapper closed -->
   </div>
 
-
-
   <script type="template" id="modal-template">
     <div class="overlay">
       <div class="popup__container">
@@ -1131,11 +1148,13 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/mobile-detect/1.3.6/mobile-detect.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.18/jquery.touchSwipe.min.js"></script>
+  <script src="https://www.youtube.com/iframe_api"></script>
   <script src="js/ops.js"></script>
   <script src="js/hamburger-menu.js"></script>
   <script src="js/product-slider.js"></script>
   <script src="js/modal.js"></script>
   <script src="js/acco.js"></script>
+  <script src="js/video-player.js"></script>
   <script src="js/form-input-numbers.js"></script>
   <script src="js/map.js"></script>
 
