--- a/index.html
+++ b/index.html
@@ -915,9 +915,9 @@
                 <svg class="play sound__mic" id="mic">
                   <use xlink:href="./sprite.svg#volume-icon"></use>
                 </svg>
-                <div class="sound__volume">
-                  <input type="range" class="duration__length duration__length--other" id="micLevel">
-                </div>
+              </div>
+              <div class="sound__volume" id="sound-bar">
+                <input type="range" class="duration__length duration__length--other" id="micLevel">
               </div>
             </div>
           </div>
