--- a/index.html
+++ b/index.html
@@ -901,9 +901,10 @@
             <div class="player__wrapper">
               <div id="yt-player"></div>
               <div class="player__splash"></div>
+              <img src="images/play_white.png" alt="" class="start player__start-btn">
             </div>
             <div class="player__controls">
-              <button class="player__start"></button>
+              <button class="start player__start"></button>
               <div class="player__playback">
                 <button class="player__playback-button"></button>
               </div>
