--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 
 <head>
 
@@ -35,31 +35,31 @@
                 <nav class="nav">
                   <ul class="nav__list">
                     <li class="nav__item">
-                      <a href="#about" class="nav__link">О нас</a>
+                      <a href="#about" class="nav__link">О About us</a>
                     </li>
                     <li class="nav__item">
-                      <a href="#burgers" class="nav__link">Бургеры</a>
+                      <a href="#burgers" class="nav__link">Burgers</a>
                     </li>
                     <li class="nav__item">
-                      <a href="#team" class="nav__link">Команда</a>
+                      <a href="#team" class="nav__link">Team</a>
                     </li>
                     <li class="nav__item">
-                      <a href="#menu" class="nav__link">Меню</a>
+                      <a href="#menu" class="nav__link">Menu</a>
                     </li>
                     <li class="nav__item">
-                      <a href="#feedback" class="nav__link">Отзывы</a>
+                      <a href="#feedback" class="nav__link">Feedback</a>
                     </li>
                     <li class="nav__item">
-                      <a href="#how" class="nav__link">Как мы работаем</a>
+                      <a href="#how" class="nav__link">How</a>
                     </li>
                     <li class="nav__item">
-                      <a href="#map" class="nav__link">Контакты</a>
+                      <a href="#map" class="nav__link">Contact Us</a>
                     </li>
                   </ul>
                 </nav>
               </div>
               <div class="header__links">
-                <a href="#order" class="btn hero__order-btn">Заказать</a>
+                <a href="#order" class="btn hero__order-btn">JoinUs</a>
                   <a class="hamburger-menu-link" id="hamburger-menu-link" href="">
                     <div class="hamburger-menu-link__bars"></div>
                   </a>
