--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <div class="hero__content">
 
             <div class="hero__content-image">
-              <img src="images/burgerd.png" alt="Фото бургера" class="hero__burger-img">
+              <img src="images/20211206_181753.png" alt="Mr.Burger" class="hero__burger-img">
             </div>
             <div class="hero__content-description">
               <h1 class="section-title section-title_hero">Мы делаем</h1>
