--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <title>MrBurger</title>
 
   <link rel="stylesheet" href="css/main.css">
-  <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
-  <link rel="icon" href="./favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="images/20211206_181753.png" type="image/x-icon">
+  <link rel="icon" href="images/20211206_181753.png" type="image/x-icon">
 
 </head>
 
@@ -74,8 +74,8 @@
               <img src="images/20211206_181753.png" alt="Mr.Burger" class="hero__burger-img">
             </div>
             <div class="hero__content-description">
-              <h1 class="section-title section-title_hero">Мы делаем</h1>
-              <div class="hero__content-text">натуральные бургеры</div>
+              <h1 class="section-title section-title_hero">We Provide</h1>
+              <div class="hero__content-text">Alot of Burgers</div>
             </div>
 
           </div>
@@ -93,7 +93,7 @@
 
       <section class="section section_centered best" id="about">
         <div class="container best__container">
-          <h1 class="section-title section-title_black section-title_best">Мы лучшие</h1>
+          <h1 class="section-title section-title_black section-title_best">We got you best</h1>
           <ul class="best__list">
             <li class="best__item">
               <div class="best__image">
@@ -102,11 +102,10 @@
                 </svg>
               </div>
               <div class="best__content">
-                <div class="best__content-title">100% свежее мясо</div>
+                <div class="best__content-title">Easy to Transfer</div>
                 <div class="best__content-text">
                   <p>
-                    Драма представляет собой деструктивный цикл.
-                    Анапест представляет собой анапест. Ямб неравномерен.
+                    More to write.
                   </p>
                 </div>
               </div>
