--- a/index.html
+++ b/index.html
@@ -117,12 +117,10 @@
                 </svg>
               </div>
               <div class="best__content">
-                <div class="best__content-title">Ручная сборка</div>
+                <div class="best__content-title">Limitless Burgers</div>
                 <div class="best__content-text">
                   <p>
-                    Драма представляет собой деструктивный цикл.
-                    Анапест представляет собой анапест. Первое полустишие притягивает
-                    сюжетный реформаторский пафос.
+                    More to write.
                   </p>
                 </div>
               </div>
@@ -134,11 +132,10 @@
                 </svg>
               </div>
               <div class="best__content">
-                <div class="best__content-title">Натуральные ингредиенты</div>
+                <div class="best__content-title">Available on BCH</div>
                 <div class="best__content-text">
                   <p>
-                    Драма представляет собой деструктивный цикл.
-                    Анапест представляет собой анапест.
+                    We are available on bch chain & its side chain.
                   </p>
                 </div>
               </div>
