--- a/index.html
+++ b/index.html
@@ -171,61 +171,61 @@
       <section class="section team" id="team">
         <div class="container team__container">
           <div class="team__content">
-            <h1 class="section-title section-title_team">Команда</h1>
+            <h1 class="section-title section-title_team">Team</h1>
             <div class="team-accordeon">
               <ul class="team-accrodeon__list">
                 <li class="team-accordeon__item">
-                  <h3 class="team-accordeon__title">Дэниэл Редклиф</h3>
+                  <h3 class="team-accordeon__title">Adarsh</h3>
                   <div class="team-accordeon__content">
                     <div class="team-accordeon__content_all">
                       <div class="team-accordeon__avatar">
-                        <img class="team-accordeon__avatar-img" src="./images/team-2.png" alt="Фото Ричарда">
+                        <img class="team-accordeon__avatar-img" src="./images/" alt="MasterChef">
                       </div>
                       <div class="team-accordeon__description">
-                        <h4 class="team-accordeon__description-title">Оператор</h4>
-                        <p class="team-accordeon__description-text">С радостью поможет подобрать идеальный бургер и оформить заказ.</p>
+                        <h4 class="team-accordeon__description-title">MasterChef</h4>
+                        <p class="team-accordeon__description-text">Happy to help</p>
                       </div>
                     </div>
                   </div>
                 </li>
                 <li class="team-accordeon__item">
-                  <h3 class="team-accordeon__title">Ричард Джеймс</h3>
+                  <h3 class="team-accordeon__title">Princess</h3>
                   <div class="team-accordeon__content">
                     <div class="team-accordeon__content_all">
                       <div class="team-accordeon__avatar">
-                        <img class="team-accordeon__avatar-img" src="./images/team-2.png" alt="Фото Ричарда">
+                        <img class="team-accordeon__avatar-img" src="./images/" alt="BurgerChef">
                       </div>
                       <div class="team-accordeon__description">
-                        <h4 class="team-accordeon__description-title">Оператор</h4>
-                        <p class="team-accordeon__description-text">С радостью поможет подобрать идеальный бургер и оформить заказ.</p>
+                        <h4 class="team-accordeon__description-title">BurgerChef</h4>
+                        <p class="team-accordeon__description-text">Hey everybody.</p>
                       </div>
                     </div>
                   </div>
                 </li>
                 <li class="team-accordeon__item">
-                  <h3 class="team-accordeon__title">Джейк Финн</h3>
+                  <h3 class="team-accordeon__title"></h3>
                   <div class="team-accordeon__content">
                     <div class="team-accordeon__content_all">
                       <div class="team-accordeon__avatar">
                         <img class="team-accordeon__avatar-img" src="./images/team-2.png" alt="Фото Ричарда">
                       </div>
                       <div class="team-accordeon__description">
-                        <h4 class="team-accordeon__description-title">Оператор</h4>
-                        <p class="team-accordeon__description-text">С радостью поможет подобрать идеальный бургер и оформить заказ.</p>
+                        <h4 class="team-accordeon__description-title"></h4>
+                        <p class="team-accordeon__description-text"></p>
                       </div>
                     </div>
                   </div>
                 </li>
                 <li class="team-accordeon__item">
-                  <h3 class="team-accordeon__title">Николай Иванов</h3>
+                  <h3 class="team-accordeon__title"></h3>
                   <div class="team-accordeon__content">
                     <div class="team-accordeon__content_all">
                       <div class="team-accordeon__avatar">
-                        <img class="team-accordeon__avatar-img" src="./images/team-2.png" alt="Фото Ричарда">
+                        <img class="team-accordeon__avatar-img" src="./images/" alt="Фото Ричарда">
                       </div>
                       <div class="team-accordeon__description">
-                        <h4 class="team-accordeon__description-title">Оператор</h4>
-                        <p class="team-accordeon__description-text">С радостью поможет подобрать идеальный бургер и оформить заказ.</p>
+                        <h4 class="team-accordeon__description-title"></h4>
+                        <p class="team-accordeon__description-text"></p>
                       </div>
                     </div>
                   </div>
