--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                   <div class="team-accordeon__content">
                     <div class="team-accordeon__content_all">
                       <div class="team-accordeon__avatar">
-                        <img class="team-accordeon__avatar-img" src="./images/team-2.png" alt="Фото Ричарда">
+                        <img class="team-accordeon__avatar-img" src="./images/20211206_181753.png" alt="Mr.Burger">
                       </div>
                       <div class="team-accordeon__description">
                         <h4 class="team-accordeon__description-title"></h4>
@@ -221,7 +221,7 @@
                   <div class="team-accordeon__content">
                     <div class="team-accordeon__content_all">
                       <div class="team-accordeon__avatar">
-                        <img class="team-accordeon__avatar-img" src="./images/" alt="Фото Ричарда">
+                        <img class="team-accordeon__avatar-img" src="./images/20211206_181753.png" alt="Mr.Burger">
                       </div>
                       <div class="team-accordeon__description">
                         <h4 class="team-accordeon__description-title"></h4>
