--- a/index.html
+++ b/index.html
@@ -237,24 +237,17 @@
       </section>
 
       <section class="section menu" id="menu">
-        <h1 class="section-title section-title_white section-title_menu">Меню</h1>
+        <h1 class="section-title section-title_white section-title_menu">Menu</h1>
         <div class="menu-accordeon">
           <ul class="menu-accordeon__list">
             <li class="menu-accordeon__item">
               <div class="menu-accordeon__title menu-accordeon__title_meat">
-                <h2 class="menu-accordeon__title-txt">Для мясоедов</h2>
+                <h2 class="menu-accordeon__title-txt">For BCHians</h2>
               </div>
               <div class="menu-accordeon__description">
                 <div class="menu-accordeon__description_all">
                   <p class="menu-accordeon__description-txt">
-                    Речевой акт редуцирует диалектический характер. Развивая эту тему,
-                    заимствование редуцирует конструктивный механизм сочленений. Лирический субъект
-                    начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться
-                    к слову, однако механизм сочленений неустойчив. Модальность высказывания, как
-                    справедливо считает И.Гальперин, пространственно выбирает метр. Речевой акт
-                    редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует
-                    конструктивный механизм сочленений. Лирический субъект начинает диссонансный
-                    анжамбеман. Наш современник стал особенно чутко относиться к слову.
+                    Everyone in BCH Chain as bch supporters can have their own Mr.Burgers.
                   </p>
                   <button class="close-btn"></button>
                 </div>
@@ -262,19 +255,12 @@
             </li>
             <li class="menu-accordeon__item">
               <div class="menu-accordeon__title menu-accordeon__title_veg">
-                <h2 class="menu-accordeon__title-txt">Вегетарианское</h2>
+                <h2 class="menu-accordeon__title-txt">MintTipBot</h2>
               </div>
               <div class="menu-accordeon__description">
                 <div class="menu-accordeon__description_all">
                   <p class="menu-accordeon__description-txt">
-                    Речевой акт редуцирует диалектический характер. Развивая эту тему,
-                    заимствование редуцирует конструктивный механизм сочленений. Лирический субъект
-                    начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться
-                    к слову, однако механизм сочленений неустойчив. Модальность высказывания, как
-                    справедливо считает И.Гальперин, пространственно выбирает метр. Речевой акт
-                    редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует
-                    конструктивный механизм сочленений. Лирический субъект начинает диссонансный
-                    анжамбеман. Наш современник стал особенно чутко относиться к слову.
+                    SLP BURGERS, are being spreaded away by @MintSLPBot.
                   </p>
                   <button class="close-btn"></button>
                 </div>
@@ -282,19 +268,12 @@
             </li>
             <li class="menu-accordeon__item">
               <div class="menu-accordeon__title menu-accordeon__title_diet">
-                <h2 class="menu-accordeon__title-txt">Диетическое</h2>
+                <h2 class="menu-accordeon__title-txt">VitrualAsset</h2>
               </div>
               <div class="menu-accordeon__description">
                 <div class="menu-accordeon__description_all">
                   <p class="menu-accordeon__description-txt">
-                    Речевой акт редуцирует диалектический характер. Развивая эту тему,
-                    заимствование редуцирует конструктивный механизм сочленений. Лирический субъект
-                    начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться
-                    к слову, однако механизм сочленений неустойчив. Модальность высказывания, как
-                    справедливо считает И.Гальперин, пространственно выбирает метр. Речевой акт
-                    редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует
-                    конструктивный механизм сочленений. Лирический субъект начинает диссонансный
-                    анжамбеман. Наш современник стал особенно чутко относиться к слову.
+                    Don't worry you wont get fat by having a lot of burgers.
                   </p>
                   <button class="close-btn"></button>
                 </div>
@@ -429,128 +408,44 @@
         </ul>
       </section>
 
-      <section class="section section_centered order" id="order">
-        <div class="container order__container">
-
-          <h1 class="section-title section-title_order">Закажите доставку</h1>
-
-          <form action="#" class="form" id="order-form">
-            <div class="form__container-left">
-              <div class="form__row">
-                <div class="form__block">
-                  <div class="form__block-title"><label>Имя
-                  <input type="text" class="form__block-input" name="name" required></label></div>
-                  <div class="error"></div>
-                </div>
-                <div class="form__block">
-                  <div class="form__block-title"><label>Телефон
-                  <input type="tel" class="form__block-input" placeholder="89212264923" id="phone" name="phone" required></label></div>
-                  <div class="error"></div>
-                </div>
-              </div>
-              <div class="form__row">
-                <div class="form__block">
-                  <div class="form__block-title"><label>Улица
-                  <input type="text" class="form__block-input" name="street"></label></div>
-                </div>
-              </div>
-              <div class="form__row">
-                <div class="form__block">
-                  <div class="form__block-title"><label>Дом
-                  <input type="number" class="form__block-input" name="house" id="house"></label></div>
-                </div>
-                <div class="form__block">
-                  <div class="form__block-title"><label>Корпус
-                  <input type="number" class="form__block-input" name="housing" id="housing"></label></div>
-                </div>
-                <div class="form__block">
-                  <div class="form__block-title"><label>Квартира
-                  <input type="number" class="form__block-input" name="flat" id="flat"></label></div>
-                </div>
-                <div class="form__block">
-                  <div class="form__block-title"><label>Этаж
-                  <input type="number" class="form__block-input" name="floor" id="floor"></label></div>
-                </div>
-              </div>
-            </div>
-            <div class="form__container-right">
-              <div class="form__row">
-                <div class="form__block">
-                  <div class="form__block-title"><label>Комментарий
-                  <textarea class="form__block-input form__block-input_comment" name="comment" required></textarea></label></div>
-                  <div class="error"></div>
-                </div>
-              </div>
-              <div class="form-cntrls">
-                <div class="form-controlls">
-                  <label class="form-controlls__btn">
-                    <input type="radio" name="answer" class="form-controlls__radio">
-                    <div class="form-controlls__fake-radio"></div>
-                    <div class="form-controlls__btn-title">Потребуется сдача</div>
-                  </label>
-                  <label class="form-controlls__btn">
-                    <input type="radio" name="answer" class="form-controlls__radio">
-                    <div class="form-controlls__fake-radio"></div>
-                    <div class="form-controlls__btn-title">Оплата по карте</div>
-                  </label>
-                </div>
-                <div class="form-controlls">
-                  <label class="form-controlls__btn">
-                    <input type="checkbox" name="answer" class="form-controlls__checkbox">
-                    <div class="form-controlls__fake-checkbox"></div>
-                    <div class="form-controlls__btn-title">Не перезванивать</div>
-                  </label>
-                </div>
-                <div class="form__confirm">
-                  <button type="submit" class="btn form__confirm-btn" id="send">Заказать</button>
-                  <div class="form__clear">
-                    <button class="btn btn_background_none" type="reset">Очистить</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </form>
-        </div>
-      </section>
-
       <section class="section map" id="map">
         <div id="YMapsID" style="width: 100%; height: 100%;"></div>
         <footer class="footer">
           <div class="container footer__container">
             <div class="footer__content">
-              <div class="footer__adress">Санкт-Петербург, ул.Бабушкина, д.12/1, 15</div>
+              <div class="footer__adress">Telegram, @MrBurgerToken</div>
               <div class="footer__contacts">
                 <svg class="footer__contacts-icon">
                   <use xlink:href="./sprite.svg#phone-icon"></use>
                 </svg>
-                <a href="tel:+7(812)3771337" class="footer__contacts-phone">+7 (812) 377-13-37</a>
+                <a href="https://t.me/MrBurgerToken" class="footer__contacts-phone">@MrBurgerToken</a>
               </div>
             </div>
             <div class="footer__social">
               <ul class="social__list">
                 <li class="social__item">
-                  <a href="#" class="social__link">Вконтакте
+                  <a href="#" class="social__link">TG
                     <svg class="social__icon">
-                      <use xlink:href="./sprite.svg#vk-icon"></use>
+                      <use xlink:href="./sprite.svg#tg-icon"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social__item">
-                  <a href="#" class="social__link">Фейсбук
+                  <a href="#" class="social__link">Facebook
                     <svg class="social__icon">
                       <use xlink:href="./sprite.svg#fb-icon"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social__item">
-                  <a href="#" class="social__link">Инстаграм
+                  <a href="#" class="social__link">Instagram
                     <svg class="social__icon">
                       <use xlink:href="./sprite.svg#inst-icon"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social__item">
-                  <a href="#" class="social__link">Твиттер
+                  <a href="#" class="social__link">Twitter
                     <svg class="social__icon">
                       <use xlink:href="./sprite.svg#twitter-icon"></use>
                     </svg>
