--- a/index.html
+++ b/index.html
@@ -505,25 +505,22 @@
       <nav class="nav" id="nav">
         <ul class="nav__list nav__list_hamburger-menu">
           <li class="nav__item" id="nav__item">
-            <a href="#about" class="nav__link" id="nav__link">О нас</a>
+            <a href="#about" class="nav__link" id="nav__link">More</a>
           </li>
           <li class="nav__item" id="nav__item">
-            <a href="#burgers" class="nav__link" id="nav__link">Бургеры</a>
+            <a href="#burgers" class="nav__link" id="nav__link">FunPage</a>
           </li>
           <li class="nav__item" id="nav__item">
-            <a href="#team" class="nav__link" id="nav__link">Команда</a>
+            <a href="#team" class="nav__link" id="nav__link">Team</a>
           </li>
           <li class="nav__item" id="nav__item">
-            <a href="#menu" class="nav__link" id="nav__link">Меню</a>
+            <a href="#menu" class="nav__link" id="nav__link">Menu</a>
           </li>
           <li class="nav__item" id="nav__item">
-            <a href="#feedback" class="nav__link" id="nav__link">Отзывы</a>
+            <a href="#feedback" class="nav__link" id="nav__link">FeedBacks</a>
           </li>
           <li class="nav__item" id="nav__item">
-            <a href="#how" class="nav__link" id="nav__link">Как мы работаем</a>
-          </li>
-          <li class="nav__item" id="nav__item">
-            <a href="#map" class="nav__link" id="nav__link">Контакты</a>
+            <a href="#map" class="nav__link" id="nav__link">FakeMap</a>
           </li>
         </ul>
       </nav>
