--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <title>MrBurger</title>
 
   <link rel="stylesheet" href="css/main.css">
-  <link rel="shortcut icon" href="images/20211206_181753.png" type="image/x-icon">
-  <link rel="icon" href="images/20211206_181753.png" type="image/x-icon">
+  <link rel="shortcut icon" href="./images/20211206_181753.png" type="image/x-icon">
+  <link rel="icon" href="./images/20211206_181753.png" type="image/x-icon">
 
 </head>
 
